<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:theme="@style/Theme.HostelGo"
tools:context=".LoginActivity">

<TextView
    android:id="@+id/Login"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="160dp"
    android:text="@string/welcome_back"
    android:textColor="@color/colorPrimaryDark"
    android:textSize="28sp"
    android:textStyle="bold"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

<TextView
    android:id="@+id/SignUp3"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:text="@string/login"
    android:textColor="@color/colorPrimaryDark"
    android:textSize="18sp"
    app:layout_constraintEnd_toEndOf="@+id/Login"
    app:layout_constraintStart_toStartOf="@+id/Login"
    app:layout_constraintTop_toBottomOf="@+id/Login" />

<com.google.android.material.textfield.TextInputLayout
    android:id="@+id/textInputLayout"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="24dp"
    android:layout_marginTop="80dp"
    android:layout_marginEnd="24dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/SignUp3">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/tietUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:imeOptions="actionNext"
        android:inputType="text"
        android:singleLine="true" />
</com.google.android.material.textfield.TextInputLayout>

<com.google.android.material.textfield.TextInputLayout
    android:id="@+id/textInputLayout2"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    app:layout_constraintEnd_toEndOf="@+id/textInputLayout"
    app:layout_constraintStart_toStartOf="@+id/textInputLayout"
    app:layout_constraintTop_toBottomOf="@+id/textInputLayout">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/tiePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:imeOptions="actionDone"
        android:inputType="textPassword" />
</com.google.android.material.textfield.TextInputLayout>

<com.google.android.material.button.MaterialButton
    android:id="@+id/btnLogin"
    style="@style/btnStyle"
    android:layout_width="0dp"
    android:layout_marginTop="32dp"
    android:text="@string/login"
    app:layout_constraintEnd_toEndOf="@+id/textInputLayout2"
    app:layout_constraintHorizontal_bias="0.464"
    app:layout_constraintStart_toStartOf="@+id/textInputLayout2"
    app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />

</androidx.constraintlayout.widget.ConstraintLayout>