<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cvItemHistory"
    style="@style/cardViewStyle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="24dp"

    android:layout_marginTop="8dp"
    android:layout_marginEnd="24dp"
    android:layout_marginBottom="8dp"
    android:clickable="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/passStatus"
            style="@style/text_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/pass_status"
            app:layout_constraintBottom_toTopOf="@+id/date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/date"
            style="@style/text_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/date"
            app:layout_constraintBottom_toTopOf="@+id/location"
            app:layout_constraintStart_toStartOf="@+id/passStatus"
            app:layout_constraintTop_toBottomOf="@+id/passStatus" />

        <TextView
            android:id="@+id/location"
            style="@style/text_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/location"
            app:layout_constraintBottom_toTopOf="@+id/intime"
            app:layout_constraintStart_toStartOf="@+id/date"
            app:layout_constraintTop_toBottomOf="@+id/date" />

        <TextView
            android:id="@+id/intime"
            style="@style/text_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/intime"
            app:layout_constraintStart_toStartOf="@+id/location"
            app:layout_constraintTop_toBottomOf="@+id/location" />

        <TextView
            android:id="@+id/outtime"
            style="@style/text_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/outtime"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/intime"
            app:layout_constraintTop_toBottomOf="@+id/intime" />

        <TextView
            android:id="@+id/textViewstatus"
            style="@style/text_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textColor="@color/peach"
            app:layout_constraintBottom_toBottomOf="@+id/passStatus"
            app:layout_constraintStart_toEndOf="@+id/passStatus"
            app:layout_constraintTop_toTopOf="@+id/passStatus"
            tools:text="Approved" />

        <TextView
            android:id="@+id/textViewdate"
            style="@style/text_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textColor="@color/peach"
            app:layout_constraintBottom_toBottomOf="@+id/date"
            app:layout_constraintStart_toEndOf="@+id/date"
            app:layout_constraintTop_toTopOf="@+id/date"
            tools:text="12-10-2022" />

        <TextView
            android:id="@+id/textViewlocation"
            style="@style/text_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textColor="@color/peach"
            app:layout_constraintBottom_toBottomOf="@+id/location"
            app:layout_constraintStart_toEndOf="@+id/location"
            app:layout_constraintTop_toTopOf="@+id/location"
            tools:text="Jhalwa" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>