<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/peach"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/MainScreenText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="My OutPass"
        android:textColor="@color/white"
        style="@style/titleTextStyle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/LogoutIv"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:background="@drawable/white_logout"
        android:contextClickable="true"
        android:contentDescription="LogoutIv"
        android:clickable="true"
        android:longClickable="true"
        android:paddingEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="6dp">
    </ImageView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/home_bg"
        android:elevation="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MainScreenText">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="0dp"
            android:text="@string/menu"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <RelativeLayout
            android:id="@+id/relativelayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:background="@color/peach"
            app:layout_constraintTop_toBottomOf="@id/textView">

            <TextView
                android:id="@+id/fullnameTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="20dp"
                android:paddingHorizontal="10dp"
                android:paddingVertical="2dp"
                android:text="@string/name"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/enrolmentTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Enrollment"
                android:layout_below="@+id/fullnameTv"
                android:layout_marginTop="10dp"
                android:layout_marginStart="24dp"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:paddingVertical="2dp"
                android:paddingHorizontal="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/fullnameTv">
            </TextView>

            <TextView
                android:id="@+id/semester"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/fullnameTv"
                android:layout_centerVertical="true"
                android:layout_marginStart="80dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="24dp"
                android:layout_toEndOf="@+id/enrolmentTv"
                android:layout_toRightOf="@+id/enrolmentTv"
                android:paddingHorizontal="10dp"
                android:paddingVertical="2dp"
                android:text="Semester"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/fullnameTv">

            </TextView>

            <TextView
                android:id="@+id/semesterTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/fullnameTv"
                android:layout_marginStart="1dp"
                android:layout_marginLeft="1dp"
                android:layout_marginTop="13dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="24dp"
                android:layout_toEndOf="@+id/semester"
                android:layout_toRightOf="@+id/semester"
                android:text="Sem"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/fullnameTv">

            </TextView>
        </RelativeLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/cvActivePass"
            style="@style/cardViewStyle"
            android:layout_width="0dp"
            android:layout_height="@dimen/home_card_height"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="24dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/relativelayout"
            app:layout_constraintTop_toBottomOf="@+id/relativelayout">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <ImageView
                    android:id="@+id/imageView1"
                    android:layout_width="@dimen/home_image_view_size"
                    android:layout_height="@dimen/home_image_view_size"
                    android:layout_marginStart="24dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/quiz" />

                <TextView
                    android:id="@+id/tvActivePass"
                    style="@style/categoryHeadingTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:text="@string/active_pass"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView1"
                    app:layout_constraintStart_toEndOf="@+id/imageView1"
                    app:layout_constraintTop_toTopOf="@+id/imageView1" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cvRecord"
            style="@style/cardViewStyle"
            android:layout_width="0dp"
            android:layout_height="@dimen/home_card_height"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toStartOf="@+id/cvApply"
            app:layout_constraintStart_toStartOf="@+id/cvActivePass"
            app:layout_constraintTop_toBottomOf="@+id/cvActivePass">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="@dimen/home_image_view_size"
                    android:layout_height="@dimen/home_image_view_size"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.35"
                    app:srcCompat="@drawable/rules" />

                <TextView
                    style="@style/categoryHeadingTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/records"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView2" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cvApply"
            android:layout_width="0dp"
            style="@style/cardViewStyle"
            android:layout_height="@dimen/home_card_height"
            app:layout_constraintBottom_toBottomOf="@+id/cvRecord"
            app:layout_constraintEnd_toEndOf="@+id/cvActivePass"
            app:layout_constraintStart_toEndOf="@+id/cvRecord"
            app:layout_constraintTop_toTopOf="@+id/cvRecord" >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="@dimen/home_image_view_size"
                    android:layout_height="@dimen/home_image_view_size"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintVertical_bias="0.35"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/history" />

                <TextView
                    style="@style/categoryHeadingTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/apply"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView3" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>